# shellguide

./: CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
landing/: index.html
misc/: startup_guide.txt
src/shellguide/: __init__.py  __main__.py  app.py
src/shellguide/core/: challenges.py  cheat_sheet.py  command_builder.py  command_explainer.py  executor.py  file_ops.py  file_utils.py  sandbox.py
src/shellguide/screens/: confirm_dialog.py  help_screen.py  input_dialog.py  main_screen.py  search_screen.py  teach_screen.py
src/shellguide/styles/: app.tcss
src/shellguide/widgets/: breadcrumb.py  challenge_panel.py  cheat_sheet_panel.py  command_log.py  file_info_panel.py  file_table.py  file_tree.py  status_bar.py
