[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellguide"
version = "0.1.0"
description = "Interactive terminal file manager & shell teacher"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "humanize>=4.9.0",
]

[project.scripts]
shellguide = "shellguide.app:main"
